--- a/style.css
+++ b/style.css
@@ -263,4 +263,36 @@ body{
         background: #fff;
         transform: rotate( -45deg );
      }
+     .background-tag{
+        align-items:initial;
+        margin-left: 0px;
+        width: 500px;
+    }
+    .mode-choice-name{
+        width: 180px;
+        padding-top: 120px;
+        font-size: 15px;
+        border-bottom: 3px  gray;
+        margin-left: 30px;
+     }
+     .mode-choice-name{
+        width: 0px;
+        padding-top: 145px;
+        font-size: 20px;
+        border-bottom: 3px  gray;
+     }
+     .btn--orange{
+        padding: 20px;
+        margin-left: 0px;
+        width: 250px;
+        font-size: 18px;
+    }
+    .footer {
+        background-color: gray;
+        bottom: 0; /*下に固定*/
+        padding: 30px 0;
+        position: center;
+        position: absolute;
+        width: 100%;
+      }
     }
