--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ body{
     align-items: center;
     width: 350px;
     font-size: 18px;
-    
  }
  .start-btn--orange{
     padding: 20px;
@@ -266,12 +265,16 @@ body{
      .background-tag{
         align-items:initial;
         margin-left: 0px;
-        width: 500px;
+        width: 400px;
+    }
+    .mode-choice{
+       font-size: 40px;
+       width: 350px;
     }
     .mode-choice-name{
         width: 180px;
         padding-top: 120px;
-        font-size: 15px;
+        font-size: 10px;
         border-bottom: 3px  gray;
         margin-left: 30px;
      }
@@ -287,12 +290,24 @@ body{
         width: 250px;
         font-size: 18px;
     }
+    .btn-secondary{
+      margin-top: 50px;
+      padding: 20px;
+      flex-direction: column;
+      align-items: center;
+      width: 300px;
+      font-size: 18px;
+   }
+   .start-btn--orange{
+      padding: 20px;
+      flex-direction: column;
+      width: 300px;
+      font-size: 18px;
+   }
     .footer {
         background-color: gray;
-        bottom: 0; /*下に固定*/
         padding: 30px 0;
         position: center;
-        position: absolute;
         width: 100%;
       }
     }
